--- a/Menu Principal/CSS/admin.css
+++ b/Menu Principal/CSS/admin.css
@@ -43,7 +43,7 @@ label {
     box-shadow: 0px 2px 5px #7e7566;
     width: 8vw;
     border-radius: 10px;
-    font-size: 1.2em;
+    font-size: 1vw;
     font-weight: bold;
     transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
 }
@@ -89,7 +89,6 @@ label {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
     width: 20vw;
     background-color: #ebe2b5;
     box-shadow: 0px 4px 5px rgba(53, 53, 53, 0.75);
@@ -99,9 +98,9 @@ label {
 .shows-existentes button {
     background: linear-gradient(0.25turn, #b89568, #F1E5A8);
     border: 1px solid black;
-    width: 4vw;
+    margin: 20px;
     border-radius: 5px;
-    font-size: 1em;
+    font-size: 1vw;
     font-weight: bold;
     cursor: pointer;
     transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
@@ -121,11 +120,13 @@ label {
 
     .add_show button {
         width: 16vw;
+        font-size: 1em;
     }
 
     .sair,
     .shows-existentes button {
         width: 8vw;
+        font-size: 0.8em;
     }
 
     .add_show input {
@@ -149,7 +150,7 @@ label {
 
     .sair,
     .shows-existentes button {
-        width: 20vw;
+        width: 10vw;
     }
 
     .add_show input {
@@ -159,6 +160,29 @@ label {
 
     .shows-existentes {
         width: 50vw;
+    }
+}
+@media screen and (max-width: 570px) {
+    .add_show {
+        width: 60vw;
+    }
+
+    .add_show button {
+        width: 30vw;
+        font-size: 1em;
+    }
+
+    .sair,
+    .shows-existentes button {
+        width: 20vw;
+    }
+
+    .add_show input {
+        width: 40vw;
+    }
+
+    .shows-existentes {
+        width: 80vw;
     }
 }
 
@@ -187,6 +211,9 @@ label {
 }
 
 @media screen and (max-width:320px) {
+    h1, h2{
+        font-size: 1.3em;
+    }
 
     .add_show {
         width: 80vw;
@@ -198,7 +225,8 @@ label {
 
     .sair,
     .shows-existentes button {
-        width: 20vw;
+        width: 25vw;
+        font-size: 0.8em;
     }
 
     .add_show input {
@@ -207,5 +235,31 @@ label {
 
     .shows-existentes {
         width: 80vw;
+    }
+}
+
+
+@media screen and (max-width:200px) {
+
+    .add_show {
+        width: 90vw;
+    }
+
+    .add_show button {
+        width: 45vw;
+    }
+
+    .sair,
+    .shows-existentes button {
+        width: 30vw;
+        font-size: 0.8em;
+    }
+
+    .add_show input {
+        width: 50vw;
+    }
+
+    .shows-existentes {
+        width: 90vw;
     }
 }
