--- a/MenuPrincipal/public/CSS/estrutura.css
+++ b/MenuPrincipal/public/CSS/estrutura.css
@@ -11,6 +11,7 @@
     cursor: pointer;
 }
 
+
 .restrita{
     display: none;
     align-items: center;
@@ -69,6 +70,7 @@ body {
     margin: 0;
     text-align: center;
     overflow-x: hidden;
+    background-color: #FFF9E6;
 }
 
 header {
@@ -201,13 +203,6 @@ footer {
     padding: 5px 0px 13px 0px;
     background-color: #FFF9E6;
 }
-
-
-
-
-
-
-
 
 
 
