--- a/MenuPrincipal/public/CSS/galeria.css
+++ b/MenuPrincipal/public/CSS/galeria.css
@@ -1,21 +1,24 @@
-body{
-    /* background:linear-gradient(rgba(47, 15, 226, 0.308), rgba(141, 121, 31, 0.568)), url(/IMG/backgrounds/background-teste.jpg); */
+/* body{
+    background:linear-gradient(rgba(47, 15, 226, 0.308), rgba(141, 121, 31, 0.568)), url(/IMG/backgrounds/background-teste.jpg);
     height: 100vh;
-}
+} */
 
 .carousel-inner{
-    height: 30vh;
-    width: 25vw;
+    height: 50vh;
+    width: 45vw;
     display: flex;
     align-items: center;
 }
 
-.container{
-    height: 31vh;
+section{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 40vw;
 }
 
+main{
+    display: flex;
+    justify-content: center;
+
+}
