--- a/views/CSS/menu-principal.css
+++ b/views/CSS/menu-principal.css
@@ -10,6 +10,11 @@ section {
     padding: 30px;
 }
 
+.error-message{
+    color: red;
+    text-align: center;
+}
+
 .menu-principal {
     display: flex;
     flex-direction: column;
