--- a/views/CSS/menu-principal.css
+++ b/views/CSS/menu-principal.css
@@ -13,6 +13,7 @@ section {
 .error-message{
     color: red;
     text-align: center;
+    margin-bottom: 5px;
 }
 
 .menu-principal {
@@ -100,6 +101,10 @@ ul {
 /* Mídia Screen para telas menores (max-width: 900px) */
 @media screen and (max-width: 900px) {
 
+    .error-message{
+    font-size: 2vw;
+    }
+
     .nome-cli {
         text-align: start;
         font-size: 4vw;
@@ -141,6 +146,11 @@ ul {
 
 /* Mídia Screen para telas muito pequenas (max-width: 600px) */
 @media screen and (max-width: 700px) {
+
+    .error-message{
+        font-size: 0.8em;
+        }
+
     .nome-cli {
         text-align: start;
         /* font-size: 0.8vw; */
@@ -167,6 +177,11 @@ ul {
     }
 }
 @media screen and (max-width: 281px) {
+
+
+    .error-message{
+        font-size: 0.5em;
+        }
 
     .nome-cli {
         text-align: start;
