--- a/views/CSS/agenda.css
+++ b/views/CSS/agenda.css
@@ -1,3 +1,7 @@
+body{
+    
+}
+
 h1{
     font-size: 4vw;
     padding: 0px 0px 20px 0px;
@@ -5,6 +9,7 @@ h1{
 
 h2{
     font-size: 2.5vw;
+    padding-top: 20px;
 }
 
 .titulo-menu{
@@ -14,4 +19,25 @@ h2{
     background-position: center;
     color: white;
     padding: 3vw;
+}
+
+.shows-existentes {
+    display: flex;
+    justify-content: center;
+    flex-direction: column-reverse;
+    align-items: center;
+    font-size: 20px;
+    width: 100%;
+    padding: 20px;
+}
+
+.show {
+    display: flex;
+    justify-content: space-between;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: justify;
+    margin-top: 20px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
 }
