--- a/MenuPrincipal/public/CSS/galeria.css
+++ b/MenuPrincipal/public/CSS/galeria.css
@@ -1,7 +1,12 @@
+body{
+    background: linear-gradient(0.25turn, #b89568be,#7e7e1670);
+} 
+
 main{
     display: flex;
     justify-content: center;
 }
+
 
 .carousel-container {
     width: 80%;
@@ -11,7 +16,8 @@ main{
 }
 
 .carousel-container h1 {
-    margin: 20px
+    margin: 20px;
+    font-size: 40px;
      
 }
 .carousel {
@@ -21,7 +27,7 @@ main{
 .carousel ul {
     list-style: none;
     display: flex;
-    transition: transform 0.5s ease;
+    transition: transform 1s ease;
 }
 .carousel li {
     flex: 0 0 100%; /* Isso aqui é para ocupar a largura total do container*/
@@ -31,19 +37,22 @@ main{
 }
 
 .carousel-1 {
-    max-width: 50vw; /* Largura máxima do primeiro carrossel */
+    max-width: 60vw; /* Largura máxima do primeiro carrossel */
 }
-.carousel-2 {
-    max-width: 50vw; /* Largura máxima do segundo carrossel */
-}
+
 .prev, .next {
-    position: absolute;
+    font-size: 50px;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
-    padding: 5px;
+    padding: 20px;
 }
 
+.carross{
+    display: flex;
+    align-items: center;
+   
+}
 .prev {
     left: 0;
 }
@@ -53,5 +62,6 @@ main{
 
 .carousel-container .prev, .carousel-container .next {
     background-color: transparent; /* Remove o fundo branco */
-    border: none; /* Remove a borda */
-    color: brown;}
+    border: none; 
+    color: rgb(0, 0, 0);
+}
