--- a/views/CSS/admin.css
+++ b/views/CSS/admin.css
@@ -20,7 +20,6 @@ label {
 
 .title-show-existente{
     padding: 20px;
-    border: 2px solid black;
     background-color: #ebe2b5;
     border-radius: 20px;
     box-shadow: 0px 4px 5px rgba(53, 53, 53, 0.75);
@@ -29,7 +28,6 @@ label {
 .container{
     margin-top: 20px;
     padding-bottom: 20px;
-    border: 2px solid black;
     background-color: #ebe2b5;
     border-radius: 20px;
     box-shadow: 0px 4px 5px rgba(53, 53, 53, 0.75);
@@ -54,9 +52,9 @@ label {
 }
 
 .add_show button {
+    border: none;
     margin-bottom:15px ;
     background: linear-gradient(0.25turn, #b89568, #F1E5A8);
-    border: 1px solid black;
     box-shadow: 0px 2px 5px #7e7566;
     width: 8vw;
     border-radius: 10px;
@@ -73,13 +71,15 @@ label {
 }
 
 .sair {
+    border: none;
     background: linear-gradient(0.25turn, #b89568, #F1E5A8);
-    border: 1px solid black;
     width: 4vw;
+    height: 3vh;
     border-radius: 10px;
     font-size: 1em;
     font-weight: bold;
     cursor: pointer;
+    box-shadow: 0px 2px 5px #7e7566;
     transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
 }
 
@@ -89,7 +89,8 @@ label {
     transform: scale(1.01);
 }
 
-.add_show input{
+.add_show input, select{
+    height: 3vh;
     width: 10vw;
     margin: 20px;
     font-size: 1em;
@@ -141,14 +142,15 @@ label {
     margin-bottom: 5px;
 }
 
-.shows-existentes button {
+.show button {
+    border: none;
     background: linear-gradient(0.25turn, #b89568, #F1E5A8);
-    border: 1px solid black;
     margin: 20px;
     border-radius: 5px;
     font-size: 1em;
     font-weight: bold;
     cursor: pointer;
+    box-shadow: 0px 2px 5px #7e7566;
     transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
 }
 
