--- a/views/CSS/estrutura.css
+++ b/views/CSS/estrutura.css
@@ -83,10 +83,10 @@ footer {
     width: 100%;
     padding: 5px 0px 13px 0px;
     background-color: #FFF9E6;
-    position: fixed;
+    /* position: fixed;
     left: 0;
-    bottom: 0;
-}
+    bottom: 0; */
+} 
 
 
 .rolagem {
@@ -354,10 +354,6 @@ footer {
         width: 4vh;
     }
 
-    footer{
-        position: sticky;
-        margin-top: 20px;
-    }
     
 
 }
