--- a/views/CSS/galeria.css
+++ b/views/CSS/galeria.css
@@ -5,9 +5,11 @@ body{
 main{
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 70vh;
 }
 
-
+ 
 .carousel-container {
     width: 80%;
     margin: auto;
@@ -17,8 +19,7 @@ main{
 
 .carousel-container h1 {
     margin: 20px;
-    font-size: 40px;
-
+    font-size: 1.7vw;
 }
 .carousel {
     overflow: hidden;
@@ -33,34 +34,100 @@ main{
     flex: 0 0 100%; /* Isso aqui é para ocupar a largura total do container*/
 }
 .carousel img {
-    width: 100%; /* pras imagem ficar dentro da div certinho e não ficar cortando*/
+    border-radius: 13px;
+    border: 2px solid black;
+    width: 95%; /* pras imagem ficar dentro da div certinho e não ficar cortando*/
+    height: 90%; /* Definindo uma altura fixa para as imagens */
 }
 
 .carousel-1 {
     max-width: 60vw; /* Largura máxima do primeiro carrossel */
 }
 
-.prev, .next {
-    font-size: 50px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    padding: 20px;
-}
 
 .carross{
+    position: relative;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
+
+.prev, .next {
+    font-size: 50px;
+    cursor: pointer;
+    margin-bottom: 25px;
+}
+
 .prev {
     left: 0;
 }
+
 .next {
     right: 0;
 }
+
+
+
 
 .carousel-container .prev, .carousel-container .next {
     background-color: transparent; /* Remove o fundo branco */
     border: none;
     color: rgb(0, 0, 0);
+}
+
+
+
+@media (max-width: 1400px) {
+    .carousel-1 {
+        max-width: 70vw; /* Largura máxima do primeiro carrossel */
+    }
+
+    .carousel-container h1 {
+        margin: 20px;
+        font-size: 2.7vw;
+    }
+}
+
+
+@media (max-width: 1100px) {
+    .carousel-1 {
+        max-width: 90vw; /* Largura máxima do primeiro carrossel */
+    }
+
+    .carousel-container h1 {
+        margin: 20px;
+        font-size: 2.7vw;
+    }
+}
+@media (max-width: 768px) {
+    .carousel-1 {
+        max-width: 100vw; /* Largura máxima do primeiro carrossel */
+    }
+
+    .carousel-container h1 {
+        margin: 15px;
+        font-size: 3.7vw;
+    }
+}
+
+@media (max-width: 700px) {
+    .carousel-1 {
+        max-width: 100vw; /* Largura máxima do primeiro carrossel */
+    }
+
+    .carousel-container h1 {
+        margin: 15px;
+        font-size: 3.7vw;
+    }
+}
+
+@media (max-width: 600px) {
+    .carousel-1 {
+        max-width: 100vw; /* Largura máxima do primeiro carrossel */
+    }
+
+    .carousel-container h1 {
+        margin: 15px;
+        font-size: 3.7vw;
+    }
 }
