--- a/views/CSS/agenda.css
+++ b/views/CSS/agenda.css
@@ -1,10 +1,22 @@
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
 h1{
-    font-size: 4vw;
+    font-size: 4em;
     padding: 0px 0px 20px 0px;
 }
 
 h2{
-    font-size: 2.5vw;
+    font-size: 2.5em;
+    padding-top: 20px;
+}
+
+footer{
+    position: relative;
 }
 
 .titulo-menu{
@@ -14,4 +26,51 @@ h2{
     background-position: center;
     color: white;
     padding: 3vw;
+}
+
+.shows-existentes {
+    display: flex;
+    justify-content: center;
+    flex-direction: column-reverse;
+    align-items: center;
+    font-size: 1.3em;
+    padding: 20px;
+}
+
+.show {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    width: 100%;
+    text-align: start;
+    margin-top: 20px;
+    background-color: white;
+    border-bottom: 1px solid rgba(78, 78, 78, 0.35);
+    /* box-shadow: 0px 2px 5px rgba(53, 53, 53, 0.75); */
+}
+
+#logo-marca{
+    width: 100px;
+}
+
+.lista-shows{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#data{
+    font-weight: bold;
+}
+
+@media (max-width: 600px) {
+
+    .titulo-menu{
+        padding: 5vw;
+    }
+
+    #logo-marca{
+        display: none;
+    }
 }
