--- a/views/CSS/menu-principal.css
+++ b/views/CSS/menu-principal.css
@@ -44,6 +44,7 @@ section {
 .title-sobre,
 .avaliacao {
     font-size: 2.2vw;
+    margin-bottom: 10px;
 }
 
 /* Carrossel de avaliação */
@@ -53,26 +54,37 @@ ul {
 
 .nome-cli {
     text-align: start;
+    padding: 10px;
 }
 
 .avaliacao-li {
     text-align: justify;
-    margin-top: 2vh;
     font-size: 1vw;
+    padding: 20px;
 }
 
 .carrosel-clientes {
-    display: flex;
     background-color: rgba(255, 255, 255, 0.582);
-    align-items: center;
     border-radius: 15px;
     font-size: 1vw;
     box-shadow: 0px 5px 10px #c5c1bc;
-    width: 50vw;
+    width: 45vw;
 }
 
 .carousel-container {
     overflow: hidden;
+}
+
+.op-clientes{
+    display: flex;
+}
+.control-btn{
+    border: none;
+    outline: unset;
+    background: none;
+    font-size: 3em;
+    margin: 5px;
+    color: grey;
 }
 
 .carousel-wrapper {
@@ -85,18 +97,7 @@ ul {
     box-sizing: border-box;
 }
 
-.carousel-controls {
-    display: flex;
-    margin-bottom: 20px;
-}
 
-.carrosel-clientes button {
-    background: none;
-    border: none;
-    font-size: 2vw;
-    padding: 20px;
-    cursor: pointer;
-}
 
 /* Mídia Screen para telas menores (max-width: 900px) */
 @media screen and (max-width: 900px) {
@@ -116,7 +117,7 @@ ul {
         font-size: 2.5vw;
     }
 
-    .sobre-artista, .op-clientes{
+    .sobre-artista{
         display: flex;
         flex-direction: column;
         justify-content: space-around;
@@ -156,11 +157,11 @@ ul {
         /* font-size: 0.8vw; */
     }
     .sobre{
-        font-size: 1em;
+        font-size: 0.8em;
     }
     .avaliacao-li {
         text-align: justify;
-        font-size: 0.5em;
+        font-size: 0.8em;
     }
     .carrosel-clientes {
         display: flex;
