--- a/views/CSS/menu-principal.css
+++ b/views/CSS/menu-principal.css
@@ -26,7 +26,7 @@ section {
 
 .sobre {
     text-align: justify;
-    padding: 1.4vw;
+    padding: 1vw;
     font-size: 1.2vw;
 }
 
@@ -44,7 +44,10 @@ section {
 .title-sobre,
 .avaliacao {
     font-size: 2.2vw;
-    margin-bottom: 10px;
+}
+
+.avaliacao{
+    margin-bottom: 5px;
 }
 
 /* Carrossel de avaliação */
@@ -60,7 +63,7 @@ ul {
 .avaliacao-li {
     text-align: justify;
     font-size: 1vw;
-    padding: 20px;
+    padding: 10px;
 }
 
 .carrosel-clientes {
@@ -85,6 +88,13 @@ ul {
     font-size: 3em;
     margin: 5px;
     color: grey;
+    font-weight:bolder;
+    transition: transform 0.3s ease;
+}
+
+.control-btn:hover{
+    color: black;
+    transform: scale(1.2);
 }
 
 .carousel-wrapper {
@@ -96,15 +106,14 @@ ul {
     min-width: 100%;
     box-sizing: border-box;
 }
+.carrosel{
+    margin-top: 10px;
+}
 
 
 
 /* Mídia Screen para telas menores (max-width: 900px) */
 @media screen and (max-width: 900px) {
-
-    .error-message{
-    font-size: 2vw;
-    }
 
     .nome-cli {
         text-align: start;
@@ -114,7 +123,7 @@ ul {
         width: 80vw;
     }
     .sobre{
-        font-size: 2.5vw;
+        font-size: 0.6em;
     }
 
     .sobre-artista{
@@ -127,7 +136,7 @@ ul {
     .avaliacao-li {
         text-align: justify;
         margin-top: 2vh;
-        font-size: 3vw;
+        font-size: 2.5em;
     }
 
     .carrosel-clientes {
@@ -158,6 +167,7 @@ ul {
     }
     .sobre{
         font-size: 0.8em;
+        padding: 10px;
     }
     .avaliacao-li {
         text-align: justify;
@@ -169,7 +179,7 @@ ul {
         width: 80vw;
         align-items: center;
         border-radius: 15px;
-        font-size: 1.6em;
+        font-size: 1.4em;
         padding: 1vh ;
     }
 
@@ -177,7 +187,7 @@ ul {
         width: 80vw;
     }
 }
-@media screen and (max-width: 281px) {
+@media screen and (max-width: 280px) {
 
 
     .error-message{
@@ -202,7 +212,7 @@ ul {
     .carrosel-clientes {
         display: flex;
         background-color: rgba(255, 255, 255, 0.582);
-        width: 100vw;
+        width: 80vw;
         align-items: center;
         border-radius: 15px;
     }
