--- a/views/CSS/loginAdmin.css
+++ b/views/CSS/loginAdmin.css
@@ -31,7 +31,6 @@ section{
     padding: 50px;
 }
 
-
 .restrita-input{
     background: none;
     border: none;
@@ -54,16 +53,33 @@ section{
     width: 100%;
     font-size: 1vw;
     margin-top: 30px;
+    margin-bottom: 15px;
+    transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
+}
+
+.voltar{
+    text-decoration: none;
+    color: black;
+    background: linear-gradient(0.25turn,#dbcf94, #d4b995 );
+    width: 100%;
+    padding: 5px;
+    border-radius: 10px;
     transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
 }
 
 .entrar:hover{
     cursor: pointer;
     background: linear-gradient(0.25turn,#e9d1b1, #eee2a8 );
-    box-shadow: 0px 8px 15px #7a6447;
+    box-shadow: 0px 8px 12px #7a6447;
     transform: scale(1);
 }
 
+.voltar:hover{
+    cursor: pointer;
+    background: linear-gradient(0.25turn,#e9d1b1, #eee2a8 );
+    box-shadow: 0px 8px 5px #7a6447;
+    transform: scale(1);
+}
 /* RESPONSIVIDADE */
 
 @media screen and (max-width: 1024px) {
