--- a/views/CSS/estrutura.css
+++ b/views/CSS/estrutura.css
@@ -87,9 +87,8 @@ footer {
     width: 100%;
     padding: 5px 0px 13px 0px;
     background-color: #FFF9E6;
-    left: 0;
-    bottom: 0;
 }
+
 
 
 
@@ -103,7 +102,7 @@ footer {
 .ancora {
     box-shadow: 0px 5px 10px #7a6447;
     border-radius: 10px;
-    background-color: #dfbf96;
+    background-color: #eccfa8;
     font-size: 1.5vw;
     display: flex;
     justify-content: center;
