--- a/views/CSS/menu-principal.css
+++ b/views/CSS/menu-principal.css
@@ -87,6 +87,7 @@ ul {
     background: none;
     font-size: 3em;
     margin: 5px;
+    padding: 20px;
     color: grey;
     font-weight:bolder;
     transition: transform 0.3s ease;
