--- a/views/CSS/estrutura.css
+++ b/views/CSS/estrutura.css
@@ -159,12 +159,13 @@ footer {
 .nav-bar button{
     background: linear-gradient(0.25turn, #b89568, #F1E5A8);
     border: none;
+    color: black;
     font-family: 'Questrial', sans-serif;
     box-shadow: 0px 5px 10px #7a6447;
     width: 12vw;
     height: 6vh;
     border-radius: 50px;
-    font-size: 1vw;
+    font-size: 1.4vw;
     font-weight: bold;
     transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
 }
@@ -217,24 +218,22 @@ footer {
 
 
 /* responsividade */
-@media (max-width: 900px) {
-    input{
-        text-align: center;
-        margin: 10px;
-        background-color: #f0dec4;
-        border: none;
-        outline: unset;
-        border-radius: 10px;
-        color: black;
-        width: 20vw;
-        height: 3vh;
-        box-shadow: 0px 4px 5px rgba(53, 53, 53, 0.75);
-    }
-    
-    .restrita-input{
-        width: 20vw;
+@media (max-width:1000px){
+    .ancora{
+        font-size: 2.5vw;
     }
 
+    .area-restrita{
+        font-size: 3vw;
+    }
+}
+
+
+
+@media (max-width: 900px) {    
+    body{
+        font-size: 3vw;
+    }
     .entrar{
         width: 10vw;
     }
