--- a/views/CSS/menu-principal.css
+++ b/views/CSS/menu-principal.css
@@ -127,7 +127,7 @@ ul {
         padding: 0;
     }
     .nome-cli {
-        text-align: start;
+        text-align: center;
         font-size: 4vw;
     }
     .sobre-div{
