--- a/views/CSS/galeria.css
+++ b/views/CSS/galeria.css
@@ -2,6 +2,8 @@ body{
     background: linear-gradient(0.25turn, #b89568be,#7e7e1633), url(../IMG/backgrounds/wpp-carrosel.jpg);
     background-position: center;
     background-size: cover;
+    width: 100vw;
+    height: 100vh ;
 }
 
 main{
@@ -87,8 +89,6 @@ main{
 }
 
 
-
-
 @media (max-width: 2560px) {
 footer{
         position: fixed;
@@ -134,7 +134,8 @@ footer{
         background: linear-gradient(0.25turn, #b89568be,#7e7e1633), url(../IMG/backgrounds/wpp-carrosel-900px.png);
         background-position: center;
         background-size: cover;
-  
+        width: 100vw;
+        height: 100vh ;
     }
 
     .carousel-container h1 {
@@ -144,11 +145,16 @@ footer{
 }
 
 @media (max-width: 768px) {
+    main{
+        height: 70vh;
+    }
+
     body{
         background: linear-gradient(0.25turn, #b89568be,#7e7e161a), url(../IMG/backgrounds/corousel-mobile.jpg);
         background-position: center;
         background-size: cover;
-  
+        width: 100vw;
+        height: 100vh ;
     }
 
     .carousel-1 {
@@ -167,7 +173,8 @@ footer{
         background: linear-gradient(0.25turn, #b89568be,#7e7e161a), url(../IMG/backgrounds/corousel-mobile.jpg);
         background-position: center;
         background-size: cover;
-  
+        width: 100vw;
+        height: 100vh ;
     }
     .carousel-1 {
         max-width: 100vw; /* Largura máxima do primeiro carrossel */
@@ -189,9 +196,9 @@ footer{
         width: 100vw;
         height: 100vh ;
     }
- 
+
     .carousel-container{
-     width: 90vw;
+    width: 90vw;
     }
 
     .carousel-container h1 {
