--- a/views/CSS/estrutura.css
+++ b/views/CSS/estrutura.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
-
-
+ 
+ 
 :root {
     --gold: #ebe2b5;
 }
@@ -10,7 +10,7 @@
 .inicio{
     cursor: pointer;
 }
-
+ 
 .restrita{
     display: none;
     align-items: center;
@@ -34,7 +34,7 @@ input:focus::-webkit-input-placeholder {
     height: 3vh;
     box-shadow: 0px 4px 5px rgba(53, 53, 53, 0.75);
 }
-
+ 
 .entrar{
     width: 3vw;
     background: #dfbf96;
@@ -49,13 +49,13 @@ input:focus::-webkit-input-placeholder {
     cursor: pointer;
     background:#a37c49;
 }
-
+ 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
+ 
 body {
     font-family: 'Questrial', sans-serif;
     height: 100%;
@@ -64,23 +64,23 @@ body {
     overflow-x: hidden;
     background: #FFF9E6;
 }
-
+ 
 header {
     top: 0;
     z-index: 999;
     width: 100%;
     background-color: #FFF9E6;
 }
-
+ 
 main{
     position: static;
     width: 100%;
 }
-
+ 
 .youtube{
     border-radius: 10px;
 }
-
+ 
 footer {
     display: flex;
     flex-direction: column;
@@ -88,16 +88,16 @@ footer {
     padding: 5px 0px 13px 0px;
     background-color: #FFF9E6;
 }
-
-
-
-
-
+ 
+ 
+ 
+ 
+ 
 .rolagem {
     position: sticky;
     box-shadow: 0px 2px 10px rgba(53, 53, 53, 0.75);
 }
-
+ 
 /* Design dos botões */
 .ancora {
     box-shadow: 0px 5px 10px #7a6447;
@@ -123,39 +123,39 @@ footer {
     height: 15vh;
     gap: 1vw;
 }
-
+ 
 .menu li{
     margin: 0vw 3vw;
 }
-
+ 
 /* configurando tamanho da logo */
 .logo img {
     max-width: 22vw;
     max-height: 22vh;
 }
-
+ 
 .nav-bar nav > ul {
     display: flex;
     list-style: none;
     align-items: center;
-} 
-
+}
+ 
 .nav-bar nav > ul > li {
     font-size: 0.9em;
     font-weight: bold;
     color: black;
 }
-
+ 
 .nav-bar nav > ul > li > a {
     text-decoration: none;
     color: black;
 }
-
+ 
 .nav-bar nav > ul > li > a:hover{
     color: white;
     background-color: #a88e6b;
 }
-
+ 
 .nav-bar button{
     background: linear-gradient(0.25turn, #b89568, #F1E5A8);
     border: none;
@@ -169,15 +169,15 @@ footer {
     font-weight: bold;
     transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
 }
-
+ 
 .nav-bar button:hover{
     cursor: pointer;
     background: linear-gradient(0.25turn,#e9d1b1, #eee2a8 );
     box-shadow: 0px 8px 15px #7a6447;
     transform: scale(1.05);
 }
-
-
+ 
+ 
 /* Icones dos contatos */
 .icones {
     display:flex;
@@ -186,22 +186,26 @@ footer {
     gap: 50px;
     margin: 20px;
 }
-
+ 
 .icones-img{
     width: 5vh
 }
-
-
+ 
+ 
 .copyright-div{
     /* margin-top: 50px; */
-    font-size: 1.2em;
+    font-size: 1em;
+}
+ 
+.info{
+    font-size: 1.3em;
 }
 /* criando o hamburguer menu */
 .mobile-menu {
     display: none;
     cursor: pointer;
 }
-
+ 
 .mobile-menu div {
     width: 60px;
     height: 8px;
@@ -209,32 +213,32 @@ footer {
     margin: 8px;
     border-radius: 10px;
 }
-
-
-
-
-
-
-
-
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 /* responsividade */
 @media (max-width:1000px){
     .ancora{
         font-size: 2.5vw;
     }
-
+ 
     .area-restrita{
         font-size: 3vw;
     }
 }
-
-
-
+ 
+ 
+ 
 @media (max-width: 900px) {    
     .entrar{
         width: 10vw;
     }
-
+ 
     .logo-container{
         display: flex;
         padding-right: 40%;
@@ -242,11 +246,11 @@ footer {
     .menu .logo {
         display: none;
     }
-
+ 
     .menu li{
         margin: auto;
     }
-
+ 
     .ancora{
         width: 54vw;
         background: none;
@@ -256,24 +260,24 @@ footer {
         margin: 10px;
         transition:none;
     }
-
+ 
     .menu{
         margin-top: 18vh;
         background: none;
     }
-
+ 
     /* margem da header mobile */
     .content-header {
         margin: 0 10vw;
     }
-
+ 
     /* invertendo a posição da logo com o menu hamburguer */
     .flex-mobile {
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
-
+ 
     .mobile-menu {
         order: 0;
         display: block;
@@ -282,13 +286,13 @@ footer {
     .content-header {
         display: block;
     }
-
+ 
     /* criando o hamburguer menu fechar (X) */
     .mobile-menu-fechar {
         width: 10vw;
         padding: 30px 0px 30px 0px;
     }
-
+ 
     .mobile-menu-fechar-x div{
         width: 50px;
         height: 5px;
@@ -298,11 +302,11 @@ footer {
     .mobile-menu-fechar-x .line1{
         transform: rotate(-45deg) translate(-1px, 7px);
     }
-
+ 
     .mobile-menu-fechar-x .line2{
         transform: rotate(45deg) translate(-2px, -8px);
     }
-
+ 
     .nav-bar {
         transform: translateX(-120%);
         transition: transform 0.3s ease-in;
@@ -317,21 +321,21 @@ footer {
         z-index: 1000;
         border-radius: 0px 12px 12px 0px;
     }
-
+ 
     .active {
         transform: translateX(0);
     }
-
+ 
     .nav-bar nav > ul{
         flex-direction: column;
         gap: 20px;
     }
-
+ 
     .nav-bar nav > ul > li > a {
         text-decoration: none;
         color: #000000;
     }
-
+ 
     .nav-bar nav > ul > li > a > p{
         width: 100%;
         padding: 15px;
@@ -346,29 +350,29 @@ footer {
         height: 5vh;
         font-size: 1.2em;
     }
-
+ 
     .nav-bar button > p{    
         color: #BBA154;
     }
-
+ 
     .icones-img{
         width: 4vh;
     }
     
 }
-
+ 
 @media (max-width: 600px) {
-
+ 
     .logo-container{
         display: flex;
         padding-right: 0%;
     }
-
+ 
     
     .flex-mobile{
         display: flex;
     }
-
+ 
     .nav-bar button{
         background-color: #fae2c2;
         border-color: #000000;
@@ -376,22 +380,22 @@ footer {
         height: 5vh;
         font-size: 3vw;
     }
-
+ 
     .mobile-menu div{
         height: 6px;
         width: 50px;
     }
-
+ 
     .logo img{
         width: 40vw;
     }
-
+ 
     .copyright-div{
         font-size: 1.0em;
     }
-
+ 
 }
-
+ 
 @media (max-width: 380px){
     input{
         width: 30vw;
@@ -402,21 +406,21 @@ footer {
         width: 20vw;
         height: 2vh;
     }
-
+ 
     .nav-bar button{
         font-size: 4.5vw;
     }
     .nav-bar p{
         font-size:25px;
     }
-
+ 
     .icones-img{
         width: 3vh;
     }
-
+ 
     .icones{
         gap: 10px;
     }
-
+ 
 }
-
+ 
