--- a/views/CSS/galeria.css
+++ b/views/CSS/galeria.css
@@ -2,21 +2,23 @@ body{
     background: linear-gradient(0.25turn, #b89568be,#7e7e1633), url(../IMG/backgrounds/wpp-carrosel.jpg);
     background-position: center;
     background-size: cover;
+    width: 100vw;
+    height: 100vh ;
 }
-
+ 
 main{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
+ 
 .carousel-container {
     width: 80%;
     margin: auto;
     display: flex;
     flex-direction: column;
 }
-
+ 
 .carousel-container h1 {
     margin: 20px;
     font-size: 2vw;
@@ -39,12 +41,12 @@ main{
     width: 95%; /* pras imagem ficar dentro da div certinho e não ficar cortando*/
     height: 90%; /* Definindo uma altura fixa para as imagens */
 }
-
+ 
 .carousel-1 {
     max-width: 60vw; /* Largura máxima do primeiro carrossel */
 }
-
-
+ 
+ 
 .carross{
     position: relative;
     display: flex;
@@ -52,135 +54,140 @@ main{
     justify-content: space-between;
     width: auto;
 }
-
+ 
 .prev, .next {
     font-size: 50px;
     cursor: pointer;
     margin-bottom: 25px;
 }
-
+ 
 .prev {
     left: 0;
 }
-
+ 
 .next {
     right: 0;
 }
-
+ 
 .prev:hover, .next:hover{
     color: gray ;
     transform: scale(1.2);
 }
-
-
-
+ 
+ 
+ 
 .carousel-container .prev, .carousel-container .next {
     background-color: transparent; /* Remove o fundo branco */
     border: none;
     
 }
-
-
+ 
+ 
 .carousel-right {
     transform: translateX(800%);
     opacity: 0;
 }
-
-
-
-
+ 
+ 
 @media (max-width: 2560px) {
 footer{
         position: fixed;
         left: 0;
         bottom: 0;
     }
-
+ 
 }
-
+ 
 @media (max-width: 1400px) {
-
+ 
     footer{
         position: fixed;
         left: 0;
         bottom: 0;
     }
-
+ 
     .carousel-container h1 {
         margin: 20px;
         font-size: 3.2vw;
     }
-
+ 
     .carousel-1 {
         max-width: 70vw; /* Largura máxima do primeiro carrossel */
     }
-
+ 
 }
-
-
+ 
+ 
 @media (max-width: 1100px) {
     .carousel-1 {
         max-width: 90vw; /* Largura máxima do primeiro carrossel */
     }
-
+ 
     .carousel-container h1 {
         margin: 20px;
         font-size: 4vw;
     }
 }
-
+ 
 @media (max-width: 900px) {
     body{
         background: linear-gradient(0.25turn, #b89568be,#7e7e1633), url(../IMG/backgrounds/wpp-carrosel-900px.png);
         background-position: center;
         background-size: cover;
-  
+        width: 100vw;
+        height: 100vh ;
     }
-
+ 
     .carousel-container h1 {
         margin: 15px;
         font-size: 5.2vw;
     }
 }
-
+ 
 @media (max-width: 768px) {
+    main{
+        height: 70vh;
+    }
+ 
     body{
         background: linear-gradient(0.25turn, #b89568be,#7e7e161a), url(../IMG/backgrounds/corousel-mobile.jpg);
         background-position: center;
         background-size: cover;
-  
+        width: 100vw;
+        height: 100vh ;
     }
-
+ 
     .carousel-1 {
         max-width: 100vw; /* Largura máxima do primeiro carrossel */
     }
-
+ 
     .carousel-container h1 {
         margin: 15px;
         font-size: 4.8vw;
     }
 }
-
+ 
 @media (max-width: 700px) {
     
     body{
         background: linear-gradient(0.25turn, #b89568be,#7e7e161a), url(../IMG/backgrounds/corousel-mobile.jpg);
         background-position: center;
         background-size: cover;
-  
+        width: 100vw;
+        height: 100vh ;
     }
     .carousel-1 {
         max-width: 100vw; /* Largura máxima do primeiro carrossel */
     }
-
+ 
     .carousel-container h1 {
         margin: 15px;
         font-size: 5vw;
     }
 }
-
+ 
 @media (max-width: 600px) {
-
+ 
     body{
         background: linear-gradient(0.25turn, #b89568be,#7e7e161a), url(../IMG/backgrounds/corousel-mobile.jpg);
         background-position: center;
@@ -191,25 +198,25 @@ footer{
     }
  
     .carousel-container{
-     width: 90vw;
+    width: 90vw;
     }
-
+ 
     .carousel-container h1 {
         margin: 15px;
         font-size: 6.5vw;
     }
 }
-
+ 
 @media (max-width: 425px) {
-
+ 
     .prev, .next {
         font-size: 40px;
         cursor: pointer;
         margin-bottom: 25px;
     }
-
+ 
     .carousel-container h1 {
         margin: 15px;
         font-size: 7vw;
     }
-}
+}   
